--- a/section1/pandas_tutorial.ipynb
+++ b/section1/pandas_tutorial.ipynb
@@ -12199,6 +12199,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter password: ········\n",
+      "Verify password: ········\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'sha1:2317e4357671:f7b60d4d5cade6c71e94f2055d064cbd53fcaed3'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from notebook.auth import passwd\n",
+    "passwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
