--- a/section7/Analysis.ipynb
+++ b/section7/Analysis.ipynb
@@ -3224,8 +3224,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now state that Amy won for three month "
+    "We can now state that Amy won for three month and Bob won for onwe month. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
